<resources>
    <string name="app_name">Aisle Tech Challenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_nphone_number">Enter Your \nPhone Number</string>
    <string name="_91">+91</string>
    <string name="continue_">Continue</string>
    <string name="enter_the_notp">Enter The \nOTP</string>
    <string name="_0000">0000</string>
    <string name="phone_number_error">phone number does not exist</string>
    <string name="please_enter_phone_number">please enter phone number</string>
    <string name="please_enter_country_code">please enter country code</string>
    <string name="premium_members_can_nview_all_their_likes_at_once">Premium members can\nview all their likes at once</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="teena">Teena</string>
    <string name="please_enter_otp">please enter otp</string>
    <string name="wrong_otp">wrong otp</string>
</resources>