<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.PhoneNumberActivity">

    <TextView
        android:id="@+id/tv_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_80"
        android:fontFamily="@font/inter_500"
        android:lineHeight="21.78dp"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:lineHeight="36.31dp"
        android:text="@string/enter_your_nphone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_otp"
        app:layout_constraintTop_toBottomOf="@id/tv_otp" />

    <EditText
        android:id="@+id/et_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/rectangle_grey_border"
        android:fontFamily="@font/inter_700"
        android:hint="@string/_91"
        android:lineHeight="21.78dp"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_7"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@id/tv_enter_phone"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_phone" />

    <EditText
        android:id="@+id/et_phone_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:background="@drawable/rectangle_grey_border"
        android:fontFamily="@font/inter_700"
        android:hint="000000000"
        android:lineHeight="21.78dp"
        android:paddingStart="@dimen/dp_14"
        android:paddingTop="@dimen/dp_7"
        android:paddingEnd="@dimen/dp_14"
        android:paddingBottom="@dimen/dp_7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="@id/et_country_code"
        app:layout_constraintStart_toEndOf="@id/et_country_code"
        app:layout_constraintTop_toTopOf="@id/et_country_code" />

    <Button
        android:id="@+id/bt_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:background="@drawable/rectangle_yellow_filled"
        android:fontFamily="@font/inter_700"
        android:lineHeight="16.94dp"
        android:paddingStart="@dimen/dp_17"
        android:paddingTop="@dimen/dp_11"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/continue_"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textFontWeight="700"
        android:textSize="@dimen/sp_14"
        app:layout_constraintCircleRadius="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="@id/et_country_code"
        app:layout_constraintTop_toBottomOf="@id/et_country_code" />

</androidx.constraintlayout.widget.ConstraintLayout>