<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.fragment.NotesFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.fragment.NotesFragment">

    <TextView
        android:id="@+id/tv_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/gilroy_800"
        android:lineHeight="33.08dp"
        android:text="Notes"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_27"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_personal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineHeight="21.47dp"
        android:text="Personal messages to you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_notes" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".43"
        android:src="@drawable/notes_image"
        android:layout_marginTop="@dimen/dp_8"
        android:clipToOutline="true"
        android:scaleType="fitXY"
        android:background="@drawable/rectangle_rounded"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintCircleRadius="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="22dp"
        android:text="Meena, 23"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_800"
        app:layout_constraintBottom_toTopOf="@id/tv_tap"
        app:layout_constraintStart_toStartOf="@id/tv_tap" />

    <TextView
        android:id="@+id/tv_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:lineHeight="22dp"
        android:text="Tap to review 50+ notes"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_600"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image" />

    <TextView
        android:id="@+id/tv_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="31dp"
        android:lineHeight="26.95dp"
        android:text="@string/interested_in_you"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_800"
        android:textSize="@dimen/dp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/tv_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lineHeight="17.89dp"
        android:text="@string/premium_members_can_nview_all_their_likes_at_once"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_15"
        android:fontFamily="@font/gilroy_600"
        app:layout_constraintStart_toStartOf="@id/tv_interest"
        app:layout_constraintTop_toBottomOf="@id/tv_interest" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/rectangle_yellow_filled"
        android:backgroundTint="#FCDF03"
        android:lineHeight="23dp"
        android:text="Upgrade"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_800"
        app:layout_constraintBottom_toBottomOf="@id/tv_premium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@id/tv_interest"/>

    <ImageView
        android:id="@+id/iv_left_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_percent=".3"
        android:layout_marginStart="@dimen/dp_14"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/dp_16"
        android:src="@drawable/left_image"
        android:layout_marginBottom="@dimen/dp_16"
        android:clipToOutline="true"
        android:background="@drawable/rectangle_rounded_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/dp_30"
        app:layout_constraintEnd_toStartOf="@id/iv_right_image"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_premium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teena"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:lineHeight="@dimen/dp_22"
        android:fontFamily="@font/gilroy_800"
        android:layout_marginBottom="@dimen/dp_11"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@id/iv_left_image"
        app:layout_constraintStart_toStartOf="@id/iv_left_image"/>

    <ImageView
        android:id="@+id/iv_right_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_14"
        android:scaleType="fitXY"
        android:src="@drawable/right_image"
        android:clipToOutline="true"
        android:background="@drawable/rectangle_rounded_8"
        app:layout_constraintBottom_toBottomOf="@id/iv_left_image"
        app:layout_constraintCircleRadius="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_left_image"
        app:layout_constraintTop_toTopOf="@id/iv_left_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Beena"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:lineHeight="@dimen/dp_22"
        android:fontFamily="@font/gilroy_800"
        android:layout_marginBottom="@dimen/dp_11"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@id/iv_right_image"
        app:layout_constraintStart_toStartOf="@id/iv_right_image"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>